updated h1 styles and fixed homepage overlap

--- a/src/Components/Nav.css
+++ b/src/Components/Nav.css
@@ -47,6 +47,10 @@
     top: 0;
 }
 
+.alwaysOpen {
+    padding:20px 0 5px;
+}
+
 @media (max-width: 900px)  {
     .nav {
         padding-right: 0;
